--- a/recordsadmin.in
+++ b/recordsadmin.in
@@ -2,7 +2,7 @@
 
 ### recordsadmin.in
 ###
-### $Id: recordsadmin.in,v 1.11 1999/04/14 17:16:51 ashvin Exp $
+### $Id: recordsadmin.in 1.1 Sat, 15 May 1999 18:36:38 -0700 ashvin $
 ###
 ### Copyright (C) 1996 by Ashvin Goel
 ###
